// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemListDisplay component is rendered with an empty array 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <ItemListDisplay
        items={Array []}
      >
        <ul
          className="itemsList"
          id="list"
        />
      </ItemListDisplay>
    </Provider>
  </Router>
</BrowserRouter>
`;

exports[`ItemListDisplay component is rendered with array of one 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <ItemListDisplay
        items={
          Array [
            Object {
              "id": 3,
              "name": "testname",
              "quantity": 4,
            },
          ]
        }
      >
        <ul
          className="itemsList"
          id="list"
        >
          <Link
            to="/products/3"
          >
            <LinkAnchor
              href="/products/3"
              navigate={[Function]}
            >
              <a
                href="/products/3"
                onClick={[Function]}
              >
                <ItemDisplay
                  item={
                    Object {
                      "id": 3,
                      "name": "testname",
                      "quantity": 4,
                    }
                  }
                  key="3"
                >
                  <li
                    className="itemCard flex-centered green-border"
                    key="3"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="picture"
                    >
                      <img
                        src="http://placekitten.com/g/300/300"
                      />
                    </div>
                    <div
                      className="detailsSmall flex-centered"
                    >
                      <div
                        className="name"
                      >
                        testname
                      </div>
                      <div
                        className="quantity"
                      >
                        4
                      </div>
                    </div>
                  </li>
                </ItemDisplay>
              </a>
            </LinkAnchor>
          </Link>
        </ul>
      </ItemListDisplay>
    </Provider>
  </Router>
</BrowserRouter>
`;

exports[`ItemListDisplay component is rendered with array of some 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <ItemListDisplay
        items={
          Array [
            Object {
              "id": 3,
              "name": "testname",
              "quantity": 4,
            },
            Object {
              "id": 4,
              "name": "postname",
              "quantity": 8,
            },
          ]
        }
      >
        <ul
          className="itemsList"
          id="list"
        >
          <Link
            to="/products/3"
          >
            <LinkAnchor
              href="/products/3"
              navigate={[Function]}
            >
              <a
                href="/products/3"
                onClick={[Function]}
              >
                <ItemDisplay
                  item={
                    Object {
                      "id": 3,
                      "name": "testname",
                      "quantity": 4,
                    }
                  }
                  key="3"
                >
                  <li
                    className="itemCard flex-centered green-border"
                    key="3"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="picture"
                    >
                      <img
                        src="http://placekitten.com/g/300/300"
                      />
                    </div>
                    <div
                      className="detailsSmall flex-centered"
                    >
                      <div
                        className="name"
                      >
                        testname
                      </div>
                      <div
                        className="quantity"
                      >
                        4
                      </div>
                    </div>
                  </li>
                </ItemDisplay>
              </a>
            </LinkAnchor>
          </Link>
          <Link
            to="/products/4"
          >
            <LinkAnchor
              href="/products/4"
              navigate={[Function]}
            >
              <a
                href="/products/4"
                onClick={[Function]}
              >
                <ItemDisplay
                  item={
                    Object {
                      "id": 4,
                      "name": "postname",
                      "quantity": 8,
                    }
                  }
                  key="4"
                >
                  <li
                    className="itemCard flex-centered green-border"
                    key="4"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="picture"
                    >
                      <img
                        src="http://placekitten.com/g/300/300"
                      />
                    </div>
                    <div
                      className="detailsSmall flex-centered"
                    >
                      <div
                        className="name"
                      >
                        postname
                      </div>
                      <div
                        className="quantity"
                      >
                        8
                      </div>
                    </div>
                  </li>
                </ItemDisplay>
              </a>
            </LinkAnchor>
          </Link>
        </ul>
      </ItemListDisplay>
    </Provider>
  </Router>
</BrowserRouter>
`;

exports[`itemDisplay component is rendered 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [MockFunction],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <ItemDisplay
        item={
          Object {
            "id": 3,
            "name": "pierre",
            "quantity": 4,
          }
        }
      >
        <li
          className="itemCard flex-centered green-border"
          key="3"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="picture"
          >
            <img
              src="http://placekitten.com/g/300/300"
            />
          </div>
          <div
            className="detailsSmall flex-centered"
          >
            <div
              className="name"
            >
              pierre
            </div>
            <div
              className="quantity"
            >
              4
            </div>
          </div>
        </li>
      </ItemDisplay>
    </Provider>
  </Router>
</BrowserRouter>
`;
